[package]
name = "gtfs-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
derivative = "2.2"
gtfs-structures = "0.32"
log = "0.4"
pretty_env_logger = "0.4"
clap = { version = "3.2", features = ["derive"] }
