[package]
name = "gtfs-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
derivative = "2.2"
gtfs-structures = "0.36"
log = "0.4"
pretty_env_logger = "0.4"
clap = { version = "4", features = ["derive"] }
geo = "0.26.0"
itertools = "0.11.0"

[patch.crates-io]
gtfs-structures = { git = "https://github.com/zyxw59/gtfs-structure.git", branch = "signed-stair-count" }
